--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             
             <div class="project-item">
                 <h3>โปรเจกต์จบ: ระบบแนะนำสินค้าสำหรับเด็ก</h3>
-                <p><strong>รายละเอียด:</strong> พัฒนาระบบเพื่อแนะนำผลิตภัณฑ์ที่เหมาะสมกับช่วงอายุและความสนใจของเด็ก โดยใช้เทคนิค [ระบุเทคนิค/ภาษาที่ใช้]</p>
+                <p><strong>รายละเอียด:</strong> พัฒนาระบบเพื่อแนะนำผลิตภัณฑ์ที่เหมาะสมกับช่วงอายุและความสนใจของเด็ก โดยใช้เทคนิค **Rule-based Filtering**</p>
                 </div>
             
         </div>
