--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         .section h2 { color: #3498db; border-bottom: 2px solid #3498db; padding-bottom: 5px; margin-bottom: 15px; }
         .project-item { border: 1px solid #ddd; padding: 15px; margin-bottom: 15px; border-radius: 5px; }
         .skills-list { list-style: none; padding: 0; }
-        .skills-list li { background: #eee; padding: 8px; margin: 5px; display: inline-block; border-radius: 3px; }
+        .skills-list li { background: #eee; padding: 8px; margin: 5px; display: inline-block; border-radius: 3px; margin-right: 5px; margin-bottom: 5px;}
+        .skills-list strong { font-weight: bold; margin-right: 5px; color: #3498db; }
         .contact p { margin: 5px 0; }
     </style>
 </head>
@@ -31,10 +32,9 @@
         <div class="section">
             <h2>ทักษะ (Skills)</h2>
             <ul class="skills-list">
-                <li>Programming: Python</li>
-                <li>Programming: JavaScript/HTML/CSS</li>
-                <li>AI & Data: TensorFlow</li>
-                <li>Tools: Git, VS Code</li>
+                <li><strong>Languages:</strong> Python, JavaScript, HTML, CSS, SQL</li>
+                <li><strong>Data/AI/Technique:</strong> Rule-based Filtering, Basic Machine Learning, Data Cleaning</li>
+                <li><strong>Tools & Platforms:</strong> Git/GitHub, VS Code, Google Colab</li>
             </ul>
         </div>
 
@@ -44,7 +44,7 @@
             <div class="project-item">
                 <h3>โปรเจกต์จบ: ระบบแนะนำสินค้าสำหรับเด็ก</h3>
                 <p><strong>รายละเอียด:</strong> พัฒนาระบบเพื่อแนะนำผลิตภัณฑ์ที่เหมาะสมกับช่วงอายุและความสนใจของเด็ก โดยใช้เทคนิค **Rule-based Filtering**</p>
-                </div>
+            </div>
             
         </div>
 
@@ -58,7 +58,7 @@
             <h3>กิจกรรมและผลงานอื่นๆ (Activities / Achievements)</h3>
             <ul>
                 <li>เข้าร่วมอบรม "AI for Beginners by Microsoft"</li>
-                <li>ได้รับรางวัลชมเชยโครงงาน IoT ในการแข่งขัน [ชื่อการแข่งขัน]</li>
+                <li>ได้รับรางวัลชมเชยโครงงาน IoT ในการแข่งขัน **[ชื่อการแข่งขัน]**</li>
             </ul>
         </div>
 
