--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h1>นาย ศุภกร สีแก้วน้ำใส (Suphakon Sikaeonamsai)</h1>
         <p>คณะวิทยาศาสตร์ สาขาวิทยาการคอมพิวเตอร์</p>
         <p>มหาวิทยาลัยราชภัฏอุดรธานี (ปีการศึกษา 2565 – ปัจจุบัน)</p>
-        <p>ความสนใจ: [ระบุความสนใจเพิ่มเติม เช่น Web Development, Data Science, AI]</p>
+        <p>ความสนใจ: Web Development และ Data Science</p>
     </div>
 
     <div class="container">
@@ -67,7 +67,7 @@
 
         <div class="section">
             <h2>เป้าหมายในอนาคต (Career Interest)</h2>
-            <p>ต้องการเป็น [ตำแหน่งงานที่สนใจ] ที่เชี่ยวชาญด้าน [ระบุสายงานที่สนใจ] ในอนาคต</p>
+            <p>ต้องการเป็น **Web Developer** ที่เชี่ยวชาญด้าน **Data Science** ในอนาคต</p>
         </div>
         
     </div>
