--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
     <header class="hero">
         <div class="hero-content">
-            <img class="profile-img" src="./profile.jpg" alt="รูปโปรไฟล์"> 
+            <img class="profile-img" src="./Screenshot 2025-11-12 092627.png" alt="รูปโปรไฟล์"> 
             
             <h1>นาย ศุภกร สีแก้วน้ำใส (Suphakon Sikaeonamsai)</h1>
             <p>คณะวิทยาศาสตร์ สาขาวิทยาการคอมพิวเตอร์ | มหาวิทยาลัยราชภัฏอุดรธานี</p>
