--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <div class="education-item">
                 <strong>ระดับมัธยมศึกษา:</strong> มัธยมเทศบาล 6 นครอุดรธานี
                 <p><strong>สายการเรียน:</strong> วิทยาศาสตร์ - คณิตศาสตร์</p>
-                <p><strong>ปีการศึกษา:</strong> [ระบุปีที่จบการศึกษา]</p>
+                <p><strong>ปีการศึกษา:</strong> 2559-2565]</p>
             </div>
             
         </section>
